--- a/src/app/grid/grid-node/grid-node.component.scss
+++ b/src/app/grid/grid-node/grid-node.component.scss
@@ -4,3 +4,11 @@
   border: solid 1px black;
   margin: 0 0 -1px -1px;
 }
+
+.start-node {
+  background-color: green;
+}
+
+.finish-node {
+  background-color: red;
+}
