added startNode and endNode to state. started working on dijkstra algo

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,9 +1,6 @@
 <mat-toolbar color="accent">
   <span>Maze Runner</span>
-
-  <button mat-flat-button color="primary">Algorithms</button>
-
-  <button mat-flat-button color="primary">Mazes</button>
-
-  <button mat-flat-button color="primary">Escape!</button>
+  <button mat-flat-button color="warn" (click)="runDijkstra()">
+    Run Algorithm
+  </button>
 </mat-toolbar>
