Undid state to fix error with types. Passing data from app into dumb components

--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngFor="let row of grid$ | async" class="node-row">
+  <div *ngFor="let row of grid | async" class="node-row">
     <grid-node
       *ngFor="let node of row"
       [col]="node.col"
